--- a/packages/core/src/range/range.element.scss
+++ b/packages/core/src/range/range.element.scss
@@ -1,11 +1,11 @@
-// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2022 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
 @import './../styles/tokens/generated/index';
 
 :host {
-  --track-background: #{$cds-alias-object-border-color};
+  --track-background: #{$cds-alias-status-neutral};
   --track-fill-background: #{$cds-alias-status-info};
   --track-height: #{$cds-alias-object-border-width-400};
   --track-width: 50%;
